--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -25,6 +25,7 @@ body {
   input[type="text"],
   input[type="number"],
   input[type="file"],
+  input[type="email"],
   select {
     width: 100%;
     padding: 8px;
